--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -74,8 +74,49 @@ a{
   }
   
 }
+@media screen and (max-width: 480px) {
+  .LogoCnmAfterStartpostIntro {
+      width: 100vh;
+      height: 9vh;
+      contain-intrinsic-block-size: auto 100px;
+      transform-style: preserve-3d;
+      will-change: transform;
+      scale: 0.7;
+      transform: translateY(-2.2%);
+  }
+}
 
-
+@media screen and (max-width: 380px) {
+  .LogoCnmAfterStartpostIntro {
+      width: 100vh;
+      height: 7vh;
+      contain-intrinsic-block-size: auto 100px;
+      transform-style: preserve-3d;
+      will-change: transform;
+      scale: 0.7;
+      transform: translateY(-2.2%);
+  }
+  .LogoCnmAfterStartContainer {
+    position: absolute;
+    top: 50%;
+    left: 47%;
+    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
+    margin-top: 0vh;
+    z-index: -3;
+}
+}
+@media screen and (max-width: 320px) {
+  .LogoCnmAfterStartpostIntro {
+      width: 100vh;
+      height: 6vh;
+      contain-intrinsic-block-size: auto 100px;
+      transform-style: preserve-3d;
+      will-change: transform;
+      scale: 0.7;
+      transform: translateY(-2.2%);
+  }
+}
 
 .BNavInContainer{
   border-radius: 10px;
